--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -58,13 +58,12 @@
               <ul class="off-canvas-list" id="util-menu-small">
                 <li><label>Main Menu</label></li>
                 <li><a href="#/menu" id="icon_home"><span>Home</span></a></li>
-                <li><a href="#/app/job-manager" id="icon_jobs"><span>Job Queue</span></a></li>
-                <li><a href="#/app/app-manager" id="icon_apps"><span>App Manager</span></a></li>
+                <li><a href="#/app/job-manager" id="icon_jobs"><span>Job Manager</span></a></li>
+                <li><a href="#/app/app-manager" id="icon_apps"><span>App Settings</span></a></li>
                 <li><a href="log" id="icon_log"><span>Log (Debug)</span></a></li>
                 <li><a href="#/app/config" id="icon_settings"><span>Configuration</span></a></li>
                 <li><a href="#/app/network-manager" id="icon_global"><span>Network</span></a></li>
                 <li><a href="#/app/macros" id="icon_folder"><span>Macros</span></a></li>
-                
                 <li><a href="#" id="icon_colapse"><span>Collapse</span></a></li>
               </ul>
             </div>
