Add error messages to dashboard

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -172,6 +172,15 @@
         </div>
       </div>
 
+      <!-- The Dialog -->
+      <div id="modalDialog" class="reveal-modal" data-reveal aria-labelledby="modalDialogTitle" aria-hidden="true" role="dialog">
+        <h2 id="modaDialoglTitle"></h2>
+        <p id="modalDialogLead" class="lead"></p>
+        <p id="modalDialogMessage"></p>
+        <div id="modalDialogDetail"></div>        
+        <a class="close-reveal-modal" aria-label="Close">&#215;</a>
+      </div>
+
     <script type="text/javascript" src="js/libs/jquery.js">         </script>
     <script type="text/javascript" src="socket.io/socket.io.js">      </script>
     <script type="text/javascript" src="js/libs/touche.js">         </script>
