--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -173,7 +173,7 @@
       </div>
 
       <!-- The Dialog -->
-      <div id="modalDialog" class="reveal-modal" data-reveal aria-labelledby="modalDialogTitle" aria-hidden="true" role="dialog" data-options="close_on_background_click:false;close_on_esc:false;">
+      <div id="modalDialog" class="reveal-modal" data-reveal aria-labelledby="modalDialogTitle" aria-hidden="true" role="dialog" data-options="close_on_background_click:false;">
         <h2 id="modaDialoglTitle"></h2>
         <p id="modalDialogLead" class="lead"></p>
         <p id="modalDialogMessage"></p>
