Add debug mode for regular apps too

--- a/dashboard/apps/editor/index.html
+++ b/dashboard/apps/editor/index.html
@@ -21,7 +21,7 @@
   <!--<link rel="stylesheet" href="../addon/display/fullscreen.css">-->
 </head>
 <body>
-
+<!--
   <div class="row" id="buttonrow" style="margin-top: 10px;">
     <div class="small-6 columns" style="text-align:left;">
       <a href="#" id="lang-select" class="button radius" data-dropdown="drop-lang">Language...</a>
@@ -30,6 +30,9 @@
         <li><a href="#" id="lang-opensbp">OpenSBP</a></li>
       </ul>
     </div>
+    
+
+
 
     <div class="small-6 columns" style="text-align:right;">
       <a class="button radius success" data-dropdown="drop-submit" id="submit-button">Run Code</a>
@@ -39,6 +42,37 @@
       </ul>
     </div>
   </div>
+  -->
+
+  <nav class="top-bar" data-topbar role="navigation">
+  <ul class="title-area">
+    <li class="name">
+      <h1><a href="#">My Site</a></h1>
+    </li>
+     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+  </ul>
+
+  <section class="top-bar-section">
+    <!-- Right Nav Section -->
+    <ul class="right">
+      <li class="active"><a href="#">Right Button Active</a></li>
+      <li class="has-dropdown"> 
+        <a href="#">Right Button Dropdown</a>
+        <ul class="dropdown">
+          <li><a href="#">First link in dropdown</a></li>
+          <li class="active"><a href="#">Active link in dropdown</a></li>
+        </ul>
+      </li>
+    </ul>
+
+    <!-- Left Nav Section -->
+    <ul class="left">
+      <li><a href="#">Left Nav Button</a></li>
+    </ul>
+  </section>
+</nav>
+
   <div id="editor"></div>
 
 <script src="bower_components/ace-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
