--- a/dashboard/apps/editor/index.html
+++ b/dashboard/apps/editor/index.html
@@ -43,11 +43,11 @@
     </div>
   </div>
   -->
-
+  
   <nav class="top-bar" data-topbar role="navigation">
   <ul class="title-area">
     <li class="name">
-      <h1><a href="#">My Site</a></h1>
+      <h1><a id="app-header" href="#">Editor</a></h1>
     </li>
      <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
     <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
@@ -56,20 +56,27 @@
   <section class="top-bar-section">
     <!-- Right Nav Section -->
     <ul class="right">
-      <li class="active"><a href="#">Right Button Active</a></li>
       <li class="has-dropdown"> 
-        <a href="#">Right Button Dropdown</a>
+        <a href="#">Language</a>
         <ul class="dropdown">
-          <li><a href="#">First link in dropdown</a></li>
-          <li class="active"><a href="#">Active link in dropdown</a></li>
+          <li><a id="lang-opensbp" href="#">OpenSBP</a></li>
+          <li><a id="lang-gcode" href="#">G-Code</a></li>
+        </ul>
+      </li>
+      <li class="has-dropdown"> 
+        <a href="#" class="success">Execute</a>
+        <ul class="dropdown"> 
+          <li><a id="submit-immediate" href="#">Run Immediately (Ctrl+Enter)</a></li>
+          <li><a id="submit-job" href="#">Submit as Job</a></li>
         </ul>
       </li>
     </ul>
 
     <!-- Left Nav Section -->
     <ul class="left">
-      <li><a href="#">Left Nav Button</a></li>
+      <!-- <li><a href="#">Left Nav Button</a></li> -->
     </ul>
+
   </section>
 </nav>
 
@@ -120,12 +127,16 @@
     function set_language(language) {
       switch(language) {
         case 'opensbp':
-          $("#app-header").text("OpenSBP Editor");
+          $("#app-header").text("Editor (OpenSBP)");
+          $("#lang-gcode").parent().removeClass("active");
+          $("#lang-opensbp").parent().addClass("active");
           lang='opensbp';
           break;
 
         case 'gcode':
-          $("#app-header").text("G-Code Editor");
+          $("#app-header").text("Editor (G-Code)");
+          $("#lang-opensbp").parent().removeClass("active");
+          $("#lang-gcode").parent().addClass("active");
           lang = 'gcode';
           break;
       }
