Add the ability to download previously run jobs

--- a/dashboard/apps/job_manager/index.html
+++ b/dashboard/apps/job_manager/index.html
@@ -267,7 +267,7 @@
 	            '<td>'+moment.utc(job.finished_at-job.started_at).format('HH:mm:ss')+'</td>'+
 	        '</tr>'+
 	        '<tr>'+
-	        	'<td colspan="2">'+'<a id="download-'+job._id +'">Download File</a></td>' +
+	        	'<td colspan="2">'+'<a id="download-'+job._id +'" download>Download File</a></td>' +
 	        '</tr>'+
 	        '<tr>'+
 	        	'<td colspan="2">'+'<a id="resubmit-'+job._id +'">Resubmit Job &gt;&gt;</a></td>' +
@@ -303,11 +303,7 @@
 					refresh_jobs_list();
 				});
 			});
- 			$('#download-'+job._id).click(function(e) {
-				fabmoDashboard.downloadJobFile(job._id, function(err, result) {
-					refresh_jobs_list();
-				});
-			});
+ 			$('#download-'+job._id).attr({'href':'/job/' + job._id + '/file'});
 
 	        tr.addClass('shown');
  		}
