Added transformation settings to config sheet

--- a/dashboard/apps/configuration/index.html
+++ b/dashboard/apps/configuration/index.html
@@ -90,7 +90,325 @@
           </div>
         </div>
       </fieldset>
+    </div> 
+  
+
+
+
+    <div class="row">
+      <fieldset>
+        <legend>Rotation</legend>
+        <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Rotate
+                <select id="opensbp_transforms_rotate_apply" class="opensbp_input">
+                  <option value="false">Disabled</option>
+                  <option value="true">Enabled</option>
+                </select>
+              </label>
+            </div>
+        </div>
+        <div class="large-4 columns">
+          <div class="row collapse">
+            <label>Rotation Angle</label>
+            <div class="small-9 columns">
+              <input type="number" id="opensbp_transforms_rotate_angle" class="opensbp_input"/>
+            </div>
+            <div class="small-3 columns">
+              <span class="postfix">degrees</span>
+            </div>
+          </div> 
+        </div>
+        <div class="large-4 columns">
+          <div class="row collapse">
+            <label>X Rotation Point</label>
+            <div class="small-9 columns">
+              <input type="number" id="opensbp_transforms_rotate_x" class="opensbp_input"/>
+            </div>
+            <div class="small-3 columns">
+              <span class="postfix">mm</span>
+            </div>
+          </div> 
+        </div>
+        <div class="large-4 columns">
+          <div class="row collapse">
+            <label>Y Rotation Point</label>
+            <div class="small-9 columns">
+              <input type="number" id="opensbp_transforms_rotate_y" class="opensbp_input"/>
+            </div>
+            <div class="small-3 columns">
+              <span class="postfix">mm</span>
+            </div>
+          </div> 
+        </div>       
+      </fieldset>
     </div>
+
+    <div class="row">
+      <fieldset>
+        <legend>Scale</legend>
+        <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Scale
+                <select id="opensbp_transforms_scale_apply" class="opensbp_input">
+                  <option value="false">Disabled</option>
+                  <option value="true">Enabled</option>
+                </select>
+              </label>
+            </div>
+        </div>
+        <div class="large-4 columns">
+          <div class="row collapse">
+            <label>Scale X</label>
+            <div class="small-9 columns">
+              <input type="number" id="opensbp_transforms_scale_scalex" class="opensbp_input"/>
+            </div>
+            <div class="small-3 columns">
+              <span class="postfix"></span>
+            </div>
+          </div> 
+        </div>
+        <div class="large-4 columns">
+          <div class="row collapse">
+            <label>Scale Y</label>
+            <div class="small-9 columns">
+              <input type="number" id="opensbp_transforms_scale_scaley" class="opensbp_input"/>
+            </div>
+            <div class="small-3 columns">
+              <span class="postfix"></span>
+            </div>
+          </div> 
+        </div>
+        <div class="large-4 columns">
+          <div class="row collapse">
+            <label>Scale Z</label>
+            <div class="small-9 columns">
+              <input type="number" id="opensbp_transforms_scale_scalez" class="opensbp_input"/>
+            </div>
+            <div class="small-3 columns">
+              <span class="postfix"></span>
+            </div>
+          </div> 
+        </div>
+        <div class="large-4 columns">
+          <div class="row collapse">
+            <label>X Scale Point</label>
+            <div class="small-9 columns">
+              <input type="number" id="opensbp_transforms_scale_scalex" class="opensbp_input"/>
+            </div>
+            <div class="small-3 columns">
+              <span class="postfix">mm</span>
+            </div>
+          </div> 
+        </div>
+        <div class="large-4 columns">
+          <div class="row collapse">
+            <label>Y Scale Point</label>
+            <div class="small-9 columns">
+              <input type="number" id="opensbp_transforms_scale_y" class="opensbp_input"/>
+            </div>
+            <div class="small-3 columns">
+              <span class="postfix">mm</span>
+            </div>
+          </div> 
+        </div>
+        <div class="large-4 columns">
+          <div class="row collapse">
+            <label>Z Scale Point</label>
+            <div class="small-9 columns">
+              <input type="number" id="opensbp_transforms_scale_z" class="opensbp_input"/>
+            </div>
+            <div class="small-3 columns">
+              <span class="postfix">mm</span>
+            </div>
+          </div> 
+        </div>
+      </fieldset>
+    </div>
+
+    <div class="row">
+      <fieldset>
+        <legend>Offset</legend>
+        <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Offset
+                <select id="opensbp_transforms_move_apply" class="opensbp_input">
+                  <option value="false">Disabled</option>
+                  <option value="true">Enabled</option>
+                </select>
+              </label>
+            </div>
+        </div>
+        <div class="large-4 columns">
+          <div class="row collapse">
+            <label>Offset X</label>
+            <div class="small-9 columns">
+              <input type="number" id="opensbp_transforms_move_x" class="opensbp_input"/>
+            </div>
+            <div class="small-3 columns">
+              <span class="postfix">mm</span>
+            </div>
+          </div> 
+        </div>
+        <div class="large-4 columns">
+          <div class="row collapse">
+            <label>Offset Y</label>
+            <div class="small-9 columns">
+              <input type="number" id="opensb_transforms_move_y" class="opensbp_input"/>
+            </div>
+            <div class="small-3 columns">
+              <span class="postfix">mm</span>
+            </div>
+          </div> 
+        </div>
+        <div class="large-4 columns">
+          <div class="row collapse">
+            <label>Offset Z</label>
+            <div class="small-9 columns">
+              <input type="number" id="opensbp_transforms_move_z" class="opensbp_input"/>
+            </div>
+            <div class="small-3 columns">
+              <span class="postfix">mm</span>
+            </div>
+          </div> 
+        </div>
+        <div class="large-4 columns">
+          <div class="row collapse">
+            <label>Shear Angle X</label>
+            <div class="small-9 columns">
+              <input type="number" id="opensbp_transforms_shearx_angle" class="opensbp_input"/>
+            </div>
+            <div class="small-3 columns">
+              <span class="postfix">degrees</span>
+            </div>
+          </div> 
+        </div>
+        <div class="large-4 columns">
+          <div class="row collapse">
+            <label>Shear Angle Y</label>
+            <div class="small-9 columns">
+              <input type="number" id="opensbp_transforms_sheary_angle" class="opensbp_input"/>
+            </div>
+            <div class="small-3 columns">
+              <span class="postfix">degrees</span>
+            </div>
+          </div> 
+        </div>
+      </fieldset>
+    </div>
+
+    <div class="row">
+      <fieldset>
+        <legend>Shear X</legend>
+        <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Shear X
+                <select id="opensbp_transforms_shearx_apply" class="opensbp_input">
+                  <option value="false">Disabled</option>
+                  <option value="true">Enabled</option>
+                </select>
+              </label>
+            </div>
+        </div>
+        <div class="large-4 columns">
+          <div class="row collapse">
+            <label>Shear Angle X</label>
+            <div class="small-9 columns">
+              <input type="number" id="opensbp_transforms_shearx_angle" class="opensbp_input"/>
+            </div>
+            <div class="small-3 columns">
+              <span class="postfix">degrees</span>
+            </div>
+          </div> 
+        </div>
+        <div class="large-4 columns">
+          <div class="row collapse">
+            <label>Shear Angle Y</label>
+            <div class="small-9 columns">
+              <input type="number" id="opensbp_transforms_sheary_angle" class="opensbp_input"/>
+            </div>
+            <div class="small-3 columns">
+              <span class="postfix">degrees</span>
+            </div>
+          </div> 
+        </div>
+      </fieldset>
+    </div>
+
+    <div class="row">
+      <fieldset>
+        <legend>Shear Y</legend>
+        <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Shear Y
+                <select id="opensbp_transforms_sheary_apply" class="opensbp_input">
+                  <option value="false">Disabled</option>
+                  <option value="true">Enabled</option>
+                </select>
+              </label>
+            </div>
+        </div>
+        <div class="large-4 columns">
+          <div class="row collapse">
+            <label>Shear Angle Y</label>
+            <div class="small-9 columns">
+              <input type="number" id="opensbp_transforms_sheary_angle" class="opensbp_input"/>
+            </div>
+            <div class="small-3 columns">
+              <span class="postfix">degrees</span>
+            </div>
+          </div> 
+        </div>
+      </fieldset>
+    </div>
+
+    <div class="row">
+      <fieldset>
+        <legend>Interpolation</legend>
+        <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Interpolate
+                <select id="opensbp_transforms_interpolate_apply" class="opensbp_input">
+                  <option value="false">Disabled</option>
+                  <option value="true">Enabled</option>
+                </select>
+              </label>
+            </div>
+        </div>
+      </fieldset>
+    </div>
+  
+    <div class="row">
+      <fieldset>
+        <legend>Leveling</legend>
+        <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Level
+                <select id="opensbp_transforms_level_apply" class="opensbp_input">
+                  <option value="false">Disabled</option>
+                  <option value="true">Enabled</option>
+                </select>
+              </label>
+            </div>
+        </div>
+        <div class="large-4 columns">
+          <div class="row collapse">
+            <label>Leveling Data File</label>
+            <div class="small-9 columns">
+              <input type="text" id="opensbp_transforms_level_ptDataFile" class="opensbp_input"/>
+            </div>
+            <div class="small-3 columns">
+              <span class="postfix">browse</span>
+            </div>
+          </div> 
+        </div>
+      </fieldset>
+    </div>
+
+
+
+
+
 
   </section>
   <section role="tabpanel" aria-hidden="true" class="content" id="tabpanel2">
@@ -820,6 +1138,27 @@
           update();
         });
       });
+
+      $('.opensbp_input').change( function() {
+        var parts = this.id.split("_");
+        var o = {}
+        var co = o;
+        var i=0;
+        
+        do {
+          co[parts[i]] = {}
+          if(i < parts.length-1) {
+            co = co[parts[i]]            
+          }
+        } while(i++ < parts.length-1 );
+
+        co[parts[parts.length-1]] = this.value;
+        console.log(o);
+        fabmoDashboard.setConfig(o, function(err, data) {
+          update();
+        });
+      });
+
 
     });
   </script>
