--- a/dashboard/apps/job_manager/index.html
+++ b/dashboard/apps/job_manager/index.html
@@ -270,6 +270,12 @@
 	        	'<td colspan="2">'+'<a id="download-'+job._id +'" download>Download File</a></td>' +
 	        '</tr>'+
 	        '<tr>'+
+	        	'<td colspan="2">'+'<a id="edit-'+job._id +'">Edit Job &gt;&gt;</a></td>' +
+	        '</tr>'+
+	        '<tr>'+
+	        	'<td colspan="2">'+'<a id="preview-'+job._id +'">Preview Job &gt;&gt;</a></td>' +
+	        '</tr>'+
+	        '<tr>'+
 	        	'<td colspan="2">'+'<a id="resubmit-'+job._id +'">Resubmit Job &gt;&gt;</a></td>' +
 	        '</tr>'+
 	    '</table>';
@@ -303,6 +309,13 @@
 					refresh_jobs_list();
 				});
 			});
+			$('#preview-'+job._id).click(function(e) {
+				fabmoDashboard.launchApp('previewer', {'job' : job._id});
+			});
+			$('#edit-'+job._id).click(function(e) {
+				fabmoDashboard.launchApp('editor', {'job' : job._id});
+			});
+
  			$('#download-'+job._id).attr({'href':'/job/' + job._id + '/file'});
 
 	        tr.addClass('shown');
