Added transformation settings to Config page

--- a/dashboard/apps/configuration/index.html
+++ b/dashboard/apps/configuration/index.html
@@ -1100,7 +1100,14 @@
                 input.val(value);
               }
             }
-
+//            log.debug("data.opensbp = " + JSON.stringify(data.opensbp));
+            for(key in data.opensbp) {
+              value = data.opensbp[key];
+              input = $('#opensbp_' + key);
+              if(input.length) {
+                input.val(value);
+              }
+            }
           }
         });
     }
