Partial revamp of app manager

--- a/dashboard/apps/app_manager/index.html
+++ b/dashboard/apps/app_manager/index.html
@@ -1,7 +1,7 @@
 <html> 
 <head>
 	<meta charset="utf-8">
-	<title>Job Manager</title>
+	<title>Apps</title>
 
 	<!-- CSS standardisation & inclusion -->
 	<link rel="stylesheet" href="./css/foundation.min.css">
@@ -10,70 +10,47 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+   
+<nav class="top-bar" data-topbar role="navigation">
+  <ul class="title-area">
+    <li class="name">
+      <h1><a href="#">Apps</a></h1>
+    </li>
+    <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
+  </ul>
 
+  <section class="top-bar-section">
+    <ul class="right">
+      <li><a>Install App...</a></li>
+    </ul>
+
+  </section>
+</nav>
+<!--
 	<div id="myModal" class="reveal-modal" data-reveal>
 	  <h2 style="color: darkred;">Warning!</h2>
 	  <p class="lead" style="color: black;">You are about to delete an app!</p>
 	  <p style="color: black;">This will permanently remove the app from your tool.  Are you sure you want to proceed?</p>
-	  <!--<a class="close-reveal-modal">&#215;</a>-->
 	</div>
-
-	<header class="grey"> <!-- Class can be "blue", "red", "grey", "orange" -->
-		<section>
-			<div class="app-title-container">
-				<h2>App Manager</h2>
-			</div>
-		</section>
-	</header>
-	<section class="container">
-		<div class="row title">
-			<div class="small-7 medium-9 large-10 columns">
-				<h3>Installed Apps</h3>
-			</div>
-			<div class="small-5 medium-3 large-2 columns btn">
-			</div>
-		</div>
-
-		<div class="row app-row">
-			<!-- JOB HISTORY LISTING -->
-			<table class="small-12 columns">
-				<thead>
-					<tr>
-						<th class="small-2"><!--ICON--></th>
-						<th class="small-3">Name</th>
-						<th class="small-5">Description</th>
-						<th class="small-1"></th>
-						<th class="small-1"></th>
-					</tr>
-				</thead>
-				<tbody class="row app-listing"></tbody>
-			</table>
-		</div>
-	</section>
-	<section class="container">
-		<div class="row title">
-			<div class="small-7 medium-9 large-10 columns">
-				<h3>Install New Apps</h3>
-			</div>
-			<div class="small-5 medium-3 large-2 columns btn">
+-->
+	<div id="table-outer" style="margin: 30px;">
+		<div id="holder" class="container">
+			<div id="appmanager-guts">
+				<table>
+					<thead>
+						<tr>
+							<th class="small-2"><!--ICON--></th>
+							<th class="small-3">Name</th>
+							<th class="small-5">Description</th>
+							<th class="small-1"></th>
+							<th class="small-1"></th>
+						</tr>
+					</thead>
+					<tbody class="row app-listing"></tbody>
+				</table>
 			</div>
 		</div>
-		<div class="row submit-app">
-			<div class="small-12 columns">
-				<form id="submit_app" action="/app" method="post" enctype="multipart/form-data">
-					<div class="row collapse postfix-round">
-						<div class="small-9 columns">
-						  	<input id='job_selector' type="file" name="file" data-filename-placement="inside" placeholder="Browse...">
-						</div>
-						<div class="small-3 columns">
-						  	<button type"submit" class="button radius postfix success">Upload</button>
-						</div>
-					</div>
-				</form>
-			</div>
-		</div>
-
-	</section>
+	</div>
 
   <!-- Javascript inclusions -->
   <script src="./js/libs/jquery-1.10.2.js"></script>
@@ -133,15 +110,46 @@
 		});
 	});
 
-
-
 	$(document).ready(function(){
 		//Foundation Init
+		console.log('ready')
 		$(document).foundation();
 		refreshApps();
+
+		var holder = document.getElementById('holder');
+	    var state = document.getElementById('status');
+
+		if (typeof window.FileReader === 'undefined') {
+		  //state.className = 'fail';
+		} else {
+		  //state.className = 'success';
+		  //state.innerHTML = 'File API & FileReader available';
+		}
+
+		holder.ondragleave = function () {
+			$(this).removeClass('hover');
+			$('#appmanager-guts').fadeTo(200, 1.0);
+		 };		
+
+		holder.ondragenter = function () { 
+			$(this).addClass('hover');
+			$('#appmanager-guts').fadeTo(200, 0.2);
+			return false; 
+		};
+		holder.ondrop = function (e) {
+			this.className = '';
+			e.preventDefault();
+			file = e.dataTransfer.files[0]
+			fabmoDashboard.submitJob(e.dataTransfer.files[0], {filename:file.name}, function(err, data) {
+				if(err){alert("The file format you have attempted to upload is not allowed.  Files must have a valid g-code or openSBP extension.");return;}
+				refresh_jobs_list();
+			});
+			return false;
+		};
+
 	});
 
 </script>
-
+ 
 </body>
 </html>
