--- a/dashboard/apps/configuration/index.html
+++ b/dashboard/apps/configuration/index.html
@@ -22,10 +22,10 @@
   </header>
 
 <div class="row">
-  <form>
+  <form> 
 
   <ul class="tabs" data-tab role="tablist">
-    <li class="tab-title active" role="presentational" ><a href="#tabpanel1" role="tab" tabindex="0" aria-selected="true" controls="tabpanel1">General</a></li>
+    <li class="tab-title active" role="presentational" ><a href="#tabpanel1" role="tab" tabindex="0" aria-selected="true" controls="tabpanel1">General!</a></li>
     <li class="tab-title" role="presentational" ><a href="#tabpanel2" role="tab" tabindex="0"aria-selected="false" controls="tabpanel2">Axis</a></li>
     <li class="tab-title" role="presentational" ><a href="#tabpanel3" role="tab" tabindex="0"aria-selected="false" controls="tabpanel3">Inputs</a></li>
 
@@ -1098,11 +1098,12 @@
               input = $('#engine_' + key);
               if(input.length) {
                 input.val(value);
-              }
+              } 
             }
+            console.log("index: ",data.opensbp);
             for(key in data.opensbp) {
               value = data.opensbp[key];
-              input = $('#opensbp_' + key);
+              input = $('#opensbp_' + key) ;
               if(input.length) {
                 input.val(value);
               }
